# wx-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  eTools.rc
.github/: FUNDING.yml
.github/workflows/: build-daily.yml  build-macos.yml  build-release.yml  build-ubuntu.yml  build-windows.yml
CMake/: CSerialPort.cmake  asio.cmake  json.cmake  libcrc.cmake  sigslot.cmake  websocketpp.cmake  wxWidgets.cmake  wxjson.cmake
Source/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h  main.cpp
Source/Common/: BaudRateComboBox.cpp  BaudRateComboBox.h  Data.cpp  Data.h  DataBitsComboBox.cpp  DataBitsComboBox.h  DataStructure.cpp  DataStructure.h  FlowBitsComboBox.cpp  Interface.cpp  Interface.h  Log.cpp  Log.h  ParityComboBox.h  PortNameComboBox.cpp  PortNameComboBox.h  SerialPortInfo.cpp  SerialPortInfo.h  Settings.cpp  Settings.h  StopBitsComboBox.h  TextFormatComboBox.cpp  TextFormatComboBox.h  eTools.cpp  eTools.h  wxTools.cpp  wxTools.h
Source/Communication/: Communication.cpp  Communication.h  CommunicationController.cpp  CommunicationController.h  CommunicationControllerFactory.cpp  CommunicationControllerFactory.h  CommunicationFactory.cpp  CommunicationFactory.h  SerialPort.cpp  SerialPort.h  SerialPortController.cpp  SerialPortController.h  SerialPort_p.h  SocketBase.cpp  SocketBase.h  SocketBaseController.cpp  SocketBaseController.h  SocketClient.cpp  SocketClient.h  SocketClientController.cpp  SocketClientController.h  SocketServer.cpp  SocketServer.h  SocketServerController.cpp  SocketServerController.h  TCPClient.cpp  TCPClient.h  TCPClientController.cpp  TCPClientController.h  TCPServerController.cpp  TCPServerController.h  UDPClient.cpp  UDPClient.h  UDPClientController.cpp  UDPClientController.h  UDPServer.cpp  UDPServer.h  UDPServerController.cpp  UDPServerController.h  WSClient.cpp  (+7 more)
Source/HAL_IO/: Communication.h  CommunicationFactory.h  HAL_IO.cpp  HAL_IO.h  SerialPort.cpp  SocketBase.h  SocketClient.h  SocketClientController.cpp  SocketServer.h  SocketServerController.h  TCPClientController.cpp  TCPServer.cpp  TCPServer.h  UDPClient.cpp  UDPServer.h
Source/HAL_IO_UI/: CommunicationController.cpp  CommunicationController.h  CommunicationControllerFactory.cpp  SerialPortController.cpp  SerialPortController.h  SocketBaseController.cpp  UDPClientController.cpp  UDPClientController.h
Source/Links/: CommunicationFactory.h  Link.cpp  Link.h  LinkFactory.cpp  LinkFactory.h  Links.cpp  Links.h  LinksFactory.cpp  SerialPort.cpp  SerialPort.h  SocketBase.cpp  SocketBase.h  SocketBase_p.h  SocketClient.cpp  SocketClient_p.h  SocketServer.cpp  SocketServer.h  SocketServer_p.h  TCPClient.cpp  TCPClient.h  TCPClient_p.h  TCPServer.cpp  TCPServer.h  TCPServer_p.h  UDPClient.cpp  UDPClient_p.h  UDPServer.cpp  UDPServer.h  UDPServer_p.h  WSClient.cpp  WSClient.h  WSClient_p.h  WSServer.cpp  WSServer.h  WSServer_p.h
Source/LinksUi/: LinkUi.cpp  LinkUi.h  LinksController.cpp  LinksController.h  LinksControllerFactory.cpp  LinksControllerFactory.h  SerialPortController.cpp  SerialPortController.h  SerialPortUi.cpp  SerialPortUi.h  SocketBaseController.cpp  SocketBaseController.h  SocketBaseUi.cpp  SocketBaseUi.h  SocketClientController.cpp  SocketClientController.h  SocketClientUi.cpp  SocketServerUi.h  TCPClientController.cpp  TCPClientController.h  TCPClientUi.cpp  TCPClientUi.h  TCPServerController.cpp  TCPServerController.h  TCPServerUi.cpp  UDPClientController.cpp  UDPClientController.h  UDPClientUi.cpp  UDPClientUi.h  UDPServerController.cpp  UDPServerController.h  UDPServerUi.cpp  UDPServerUi.h  WSClientController.h  WSClientUi.cpp  WSServerController.cpp  WSServerController.h  WSServerUi.cpp  WSServerUi.h
Source/Page/: CommunicationControlBox.cpp  CommunicationControlBox.h  CommunicationPopup.cpp  CommunicationPopup.h  ControlBoxes.cpp  ControlBoxes.h  ControlPanel.cpp  ControlPanel.h  ControlPanelInput.cpp  ControlPanelInput.h  ControlPanelInputPopup.cpp  ControlPanelInputPopup.h  ControlPanelLink.cpp  ControlPanelLinkPopup.cpp  ControlPanelLinkPopup.h  ControlPanelOutput.h  ControlPanelOutputPopup.cpp  IOPanel.cpp  IOPanel.h  IOPanelInput.cpp  IOPanelOutput.cpp  IOPanelOutput.h  InputBox.cpp  InputBox.h  InputControlBox.cpp  InputControlBox.h  InputControlPanel.cpp  InputControlPanel.h  InputPopup.cpp  InputPopup.h  LinkControlBox.cpp  LinkControlBox.h  LinkPopup.cpp  LinkPopup.h  OutputBox.cpp  OutputBox.h  OutputControlBox.cpp  OutputControlBox.h  OutputPopup.cpp  OutputPopup.h  (+26 more)
Source/SerialPortInfo/: SerialPortInfo.cpp  SerialPortInfo.h
Source/Unit/: AdditionBoxSizer.cpp  AdditionBoxSizer.h  AdditionComboBox.cpp  AdditionComboBox.h  BaudRateComboBox.cpp  BaudRateComboBox.h  CRCTypeComboBox.cpp  CRCTypeComboBox.h  ComboBox.cpp  ComboBox.h  DataBitsComboBox.cpp  DataBitsComboBox.h  DataChannelComboBox.cpp  ESCBoxSizer.cpp  ESCBoxSizer.h  ESCComboBox.cpp  ESCComboBox.h  FlowBitsComboBox.cpp  FlowBitsComboBox.h  IpComboBox.cpp  IpComboBox.h  LineEdit.cpp  LineEdit.h  ParityComboBox.cpp  ParityComboBox.h  PortNameComboBox.cpp  PortNameComboBox.h  StopBitsComboBox.cpp  StopBitsComboBox.h  TextFormatComboBox.cpp  TextFormatComboBox.h
Source/Utilities/: AdditionBoxSizer.cpp  AdditionComboBox.cpp  BaseSettingsPopup.cpp  BaseSettingsPopup.h  BaudRateComboBox.h  DataBitsComboBox.h  DataChannelComboBox.h  ESCBoxSizer.cpp  ESCComboBox.cpp  FlowBitsComboBox.cpp  FlowBitsComboBox.h  LineEdit.cpp  LineEdit.h  ParityComboBox.h  Popup.cpp  PortNameComboBox.cpp  PortNameComboBox.h  StopBitsComboBox.h  TextFormatComboBox.cpp
cmake/: CSerialPort.cmake  asio.cmake  fmt.cmake  git.cmake  glog.cmake  json.cmake  libcrc.cmake  libmodbus.cmake  mongoose.cmake  sigslot.cmake  websocketpp.cmake  wxTools.cmake  wxWidgets.cmake
cmake/AppImage/: app_image.cmake  app_image_maker.cmake
cmake/Deb/: deb.cmake  deb_maker.cmake
cmake/Linux/: Linux.cmake  LinuxScript.cmake
cmake/Msix/: Msix.cmake
cmake/deb/: deb.cmake  (+1 more)
cmake1/: json.cmake  libcrc.cmake  websocketpp.cmake
src/: 128x128.xpm  Application.cpp  Application.h  MainWindow.cpp  MainWindow.h
(+140 files in other folders)
